--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,6 +6,16 @@
 
   <title>One Health - Medical Center HTML5 Template</title>
 
+  <script src="../../assets/js/jquery-3.5.1.min.js"></script>
+
+  <script src="../../assets/js/bootstrap.bundle.min.js"></script>
+
+  <script src="../../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+
+  <script src="../../assets/vendor/wow/wow.min.js"></script>
+
+  <script src="../../assets/js/theme.js"></script>
+
   <link rel="stylesheet" href="/assets/css/maicons.css">
 
   <link rel="stylesheet" href="/assets/css/bootstrap.css">
@@ -15,6 +25,7 @@
   <link rel="stylesheet" href="/assets/vendor/animate/animate.css">
 
   <link rel="stylesheet" href="/assets/css/theme.css">
+
 </head>
 <body>
 
@@ -147,11 +158,9 @@
       </div>
     </div> <!-- .bg-light -->
   </div> <!-- .bg-light -->
-
   <div class="page-section">
     <div class="container">
       <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>
-
       <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
         <div class="item">
           <div class="card-doctor">
@@ -423,15 +432,6 @@
     </div>
   </footer>
 
-<script src="assets/js/jquery-3.5.1.min.js"></script>
-
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-
-<script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-<script src="assets/vendor/wow/wow.min.js"></script>
-
-<script src="assets/js/theme.js"></script>
   
 </body>              
 <!-- // "src/assets/css/theme.css",
