--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,87 @@
-<p>header works!</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  
+    <title>Usta - Dent</title>
+  
+    <script src="../../assets/js/jquery-3.5.1.min.js"></script>
+  
+    <script src="../../assets/js/bootstrap.bundle.min.js"></script>
+  
+    <script src="../../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+  
+    <script src="../../assets/vendor/wow/wow.min.js"></script>
+  
+    <script src="../../assets/js/theme.js"></script>
+  
+    <link rel="stylesheet" href="/assets/css/maicons.css">
+  
+    <link rel="stylesheet" href="/assets/css/bootstrap.css">
+  
+    <link rel="stylesheet" href="/assets/vendor/owl-carousel/css/owl.carousel.css">
+  
+    <link rel="stylesheet" href="/assets/vendor/animate/animate.css">
+  
+    <link rel="stylesheet" href="/assets/css/theme.css">
+  
+  </head>
+
+  
+  <header>
+    <div class="topbar upper-header">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 text-sm">
+            <div class="site-info">
+              <a href="#"><span class="mai-call text-primary"></span> +00 123 4455 6666</a>
+              <span class="divider">|</span>
+              <a href="#"><span class="mai-mail text-primary"></span> info@ustadent.com</a>
+            </div>
+          </div>
+          <div class="col-sm-4 text-right text-sm">
+            <div class="social-mini-button">
+              <a href="#"><span class="mai-logo-facebook-f"></span></a>
+              <a href="#"><span class="mai-logo-twitter"></span></a>
+              <a href="#"><span class="mai-logo-dribbble"></span></a>
+              <a href="#"><span class="mai-logo-instagram"></span></a>
+            </div>
+          </div>
+        </div> <!-- .row -->
+      </div> <!-- .container -->
+    </div> <!-- .topbar -->
+
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm lower-header" >
+      <div class="container">
+        <a class="navbar-brand" href="#"><span class="text-primary">Usta</span>-Dent</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport" aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupport">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Anasayfa</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Hakkımızda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="doctors.html">Ekibimiz</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="blog.html">News</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">İletişim</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="btn btn-primary ml-lg-3" href="#">Login / Register</a>
+            </li> -->
+          </ul>
+        </div> <!-- .navbar-collapse -->
+      </div> <!-- .container -->
+    </nav>
+  </header>
+  
