--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,6 +53,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm lower-header" >
       <div class="container">
+        <a href="#"><img src="assets/img/logoprimary.png" alt="" style="width: 100px;"></a>
+
         <a class="navbar-brand" href="#"><span class="text-primary">Usta</span>-Dent</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport" aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
