header and footer adjusted

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,15 +2,15 @@
     <div class="container">
       <div class="row px-md-3">
         <div class="col-sm-6 col-lg-3 py-3">
-          <h5>Company</h5>
+          <!-- <h5>Company</h5> -->
+          <a href="#"><img src="assets/img/secondarylogoDark.png" alt="" style="width: 100px;"></a>
           <ul class="footer-menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Editorial Team</a></li>
-            <li><a href="#">Protection</a></li>
+            <li><a href="#">Hakkımızda</a></li>
+            <li><a href="#">Sıkça Sorulan Sorular</a></li>
+            <li><a href="#">İletişim</a></li>
           </ul>
         </div>
-        <div class="col-sm-6 col-lg-3 py-3">
+        <!-- <div class="col-sm-6 col-lg-3 py-3">
           <h5>More</h5>
           <ul class="footer-menu">
             <li><a href="#">Terms & Condition</a></li>
@@ -41,11 +41,11 @@
             <a href="#" target="_blank"><span class="mai-logo-instagram"></span></a>
             <a href="#" target="_blank"><span class="mai-logo-linkedin"></span></a>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <hr>
 
-      <p id="copyright">Copyright &copy; 2020 <a href="https://macodeid.com/" target="_blank">MACode ID</a>. All right reserved</p>
+      <p id="copyright">Copyright &copy; {{year}} UstaDent. All rights reserved</p>
     </div>
   </footer>
