--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -67,16 +67,22 @@
               <a class="nav-link" href="index.html">Anasayfa</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Hakkımızda</a>
+              <a class="nav-link" href="index.html">Hakkımızda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="doctors.html">Ekibimiz</a>
+              <a class="nav-link" href="index.html">Ürünler ve Hizmetler</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Sıkça Sorulan Sorular</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Referanslar</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="blog.html">News</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">İletişim</a>
+              <a class="nav-link" href="index.html">İletişim</a>
             </li>
             <!-- <li class="nav-item">
               <a class="btn btn-primary ml-lg-3" href="#">Login / Register</a>
