--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -32,12 +32,12 @@
   <!-- Back to top button -->
   <div class="back-sto-top"></div>
 
-  <div class="page-hero bg-image overlay-dark" style="background-image: url(assets/img/bg_image_1.jpg);">
+  <div class="page-hero bg-image overlay-dark" style="background-image: url(assets/img/landing-bg-image.jpeg);">
     <div class="hero-section">
       <div class="container text-center wow zoomIn">
-        <span class="subhead">Let's make your life happier</span>
-        <h1 class="display-4">Healthy Living</h1>
-        <a href="#" class="btn btn-primary">Let's Consult</a>
+        <span class="subhead">Some slogan</span>
+        <h1 class="display-4">Usta Dent</h1>
+        <a href="#" class="btn btn-primary">Bize Ulaş!</a>
       </div>
     </div>
   </div>
@@ -49,10 +49,10 @@
         <div class="row justify-content-center">
           <div class="col-md-4 py-3 py-md-0">
             <div class="card-service wow fadeInUp">
-              <div class="circle-shape bg-secondary text-white">
-                <span class="mai-chatbubbles-outline"></span>
+              <div class="circle-shape bg-success text-white">
+                <span class="mai-build-outline"></span>
               </div>
-              <p><span>Chat</span> with a doctors</p>
+              <p>Premium içerik</p>
             </div>
           </div>
           <div class="col-md-4 py-3 py-md-0">
@@ -60,15 +60,15 @@
               <div class="circle-shape bg-primary text-white">
                 <span class="mai-shield-checkmark"></span>
               </div>
-              <p><span>One</span>-Health Protection</p>
+              <p>Sağlıklı Malzeme</p>
             </div>
           </div>
           <div class="col-md-4 py-3 py-md-0">
             <div class="card-service wow fadeInUp">
               <div class="circle-shape bg-accent text-white">
-                <span class="mai-basket"></span>
+                <span class="mai-call-outline"></span>
               </div>
-              <p><span>One</span>-Health Pharmacy</p>
+              <p>Hızlı Destek</p>
             </div>
           </div>
         </div>
@@ -79,9 +79,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 py-3 wow fadeInUp">
-            <h1>Welcome to Your Health <br> Center</h1>
-            <p class="text-grey mb-4">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
-            <a href="about.html" class="btn btn-primary">Learn More</a>
+            <h1>Hakkımızda</h1>
+            <p class="text-grey mb-4">Buraya bazı açıklamalar. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
+            <a href="about.html" class="btn btn-primary">Daha Fazlası</a>
           </div>
           <div class="col-lg-6 wow fadeInRight" data-wow-delay="400ms">
             <div class="img-place custom-img-1">
@@ -92,9 +92,16 @@
       </div>
     </div> <!-- .bg-light -->
   </div> <!-- .bg-light -->
-  <div class="page-section">
+  <!-- <div class="page-section">
     <div class="container">
-      <h1 class="text-center mb-5 wow fadeInUp">Our Doctors</h1>
+      
+    </div>
+  </div> -->
+
+  <div class="page-section bg-light">
+    <div class="container">
+      <div class="row mt-5">
+        <h1 class="text-center mb-5 wow fadeInUp">Biz kimiz  ?  veya ürünle ilgili bölüm </h1>
       <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
         <div class="item">
           <div class="card-doctor">
@@ -172,14 +179,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-  <div class="page-section bg-light">
-    <div class="container">
-      <h1 class="text-center wow fadeInUp">Latest News</h1>
-      <div class="row mt-5">
-        <div class="col-lg-4 py-2 wow zoomIn">
+        <!-- <div class="col-lg-4 py-2 wow zoomIn">
           <div class="card-blog">
             <div class="header">
               <div class="post-category">
@@ -250,11 +250,11 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="col-12 text-center mt-4 wow zoomIn">
+        <!-- <div class="col-12 text-center mt-4 wow zoomIn">
           <a href="blog.html" class="btn btn-primary">Read More</a>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -303,37 +303,35 @@
       <div class="align-items-center">
         <div class="page-section">
           <div class="container">
-            <h1 class="text-center wow fadeInUp">Make an Appointment</h1>
+            <h1 class="text-center wow fadeInUp">Bize Ulaşın</h1>
       
             <form class="main-form">
               <div class="row mt-5 ">
                 <div class="col-12 col-sm-6 py-2 wow fadeInLeft">
-                  <input type="text" class="form-control" placeholder="Full name">
+                  <input type="text" class="form-control" placeholder="Ad Soyad">
                 </div>
                 <div class="col-12 col-sm-6 py-2 wow fadeInRight">
-                  <input type="text" class="form-control" placeholder="Email address..">
+                  <input type="text" class="form-control" placeholder="Telefon Numarası">
                 </div>
-                <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
+                <!-- <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
                   <input type="date" class="form-control">
+                </div> -->
+                <div class="col-12 py-2 wow fadeInUp" data-wow-delay="300ms">
+                  <input type="text" class="form-control" placeholder="Email Adresi..">
                 </div>
                 <div class="col-12 col-sm-6 py-2 wow fadeInRight" data-wow-delay="300ms">
                   <select name="departement" id="departement" class="custom-select">
-                    <option value="general">General Health</option>
-                    <option value="cardiology">Cardiology</option>
-                    <option value="dental">Dental</option>
-                    <option value="neurology">Neurology</option>
-                    <option value="orthopaedics">Orthopaedics</option>
+                    <option value="general">Bilgi Almak</option>
+                    <option value="cardiology">Destek Almak</option>
+                    <option value="dental">Başka Sebepler</option>
                   </select>
                 </div>
                 <div class="col-12 py-2 wow fadeInUp" data-wow-delay="300ms">
-                  <input type="text" class="form-control" placeholder="Number..">
-                </div>
-                <div class="col-12 py-2 wow fadeInUp" data-wow-delay="300ms">
-                  <textarea name="message" id="message" class="form-control" rows="6" placeholder="Enter message.."></textarea>
+                  <textarea name="message" id="message" class="form-control" rows="6" placeholder="Notunuzu giriniz.."></textarea>
                 </div>
               </div>
       
-              <button type="submit" class="btn btn-primary mt-3 wow zoomIn" style="background-color: #2D3B38!important;">Submit Request</button>
+              <button type="submit" class="btn btn-primary mt-3 wow zoomIn" style="background-color: #2D3B38!important;">Ulaş</button>
             </form>
           </div>
         </div> <!-- .page-section -->
