--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -141,7 +141,7 @@ a.bg-dark:hover, a.bg-dark:focus {
 }
 
 .text-primary {
-  color: #00C4FF !important;
+  color: #ffffff !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -923,7 +923,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(110, 128, 122, 0.8);
+  color: white;
 }
 
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
@@ -935,7 +935,7 @@ a.text-dark:hover, a.text-dark:focus {
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
   font-weight: 500;
-  color: #30A2FF;
+  color: black;
 }
 
 
@@ -1722,7 +1722,7 @@ a.text-dark:hover, a.text-dark:focus {
   display: block;
   padding-top: 80px;
   padding-bottom: 16px;
-  background-color: #2D3B38;
+  background-color: #164863;
   color: #fff;
 }
 
@@ -1836,5 +1836,5 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .about-us{
-  background-color: #FFF5B8 !important;
+  background-color: #DDF2FD !important;
 }
