--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,7 +53,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm lower-header" >
       <div class="container">
-        <a href="#"><img src="assets/img/secondarylogoBlue.png" alt="" style="width: 100px;"></a>
+        <a href="#"><img src="assets/img/logoprimary.png" alt="" style="width: 100px;"></a>
 
         <a class="navbar-brand" href="#"><span class="text-primary">Usta</span>-Dent</a>
 
