--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -46,16 +46,16 @@
   <div class="bg-light about-us">
     <div class="page-section py-3 mt-md-n5 custom-index">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-4 py-3 py-md-0">
+        <div class="row justify-content-center" style="text-align: center">
+          <!-- <div class="col-md-4 py-3 py-md-0">
             <div class="card-service wow fadeInUp">
               <div class="circle-shape bg-success text-white">
                 <span class="mai-build-outline"></span>
               </div>
               <p>Premium içerik</p>
             </div>
-          </div>
-          <div class="col-md-4 py-3 py-md-0">
+          </div> -->
+          <div class="col-md-6 py-4 py-md-0">
             <div class="card-service wow fadeInUp">
               <div class="circle-shape bg-primary text-white">
                 <span class="mai-shield-checkmark"></span>
@@ -63,7 +63,7 @@
               <p>Sağlıklı Malzeme</p>
             </div>
           </div>
-          <div class="col-md-4 py-3 py-md-0">
+          <div class="col-md-6 py-4 py-md-0">
             <div class="card-service wow fadeInUp">
               <div class="circle-shape bg-accent text-white">
                 <span class="mai-call-outline"></span>
