--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -139,10 +139,10 @@ a.bg-light:hover, a.bg-light:focus {
 a.bg-dark:hover, a.bg-dark:focus {
   background-color: #1e1f1c !important;
 }
-
+/* 
 .text-primary {
-  color: #ffffff !important;
-}
+  color: #0070e0 !important;
+} */
 
 a.text-primary:hover, a.text-primary:focus {
   color: #30A2FF !important;
@@ -826,10 +826,10 @@ a.text-dark:hover, a.text-dark:focus {
   pointer-events: none;
 }
 
-
+/* 
 .topbar {
   border-bottom: 1px solid #E8EEE4;
-}
+} */
 
 .topbar .row {
   align-items: center;
@@ -923,7 +923,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: white;
+  color: black;
 }
 
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
@@ -935,7 +935,7 @@ a.text-dark:hover, a.text-dark:focus {
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
   font-weight: 500;
-  color: black;
+  color: #007bff ;
 }
 
 
@@ -1836,5 +1836,5 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .about-us{
-  background-color: #DDF2FD !important;
+  background-color: #F5F9F6 !important;
 }
