--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -10090,7 +10090,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #007bff !important;
+  color: #5697cb !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
